--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,10 +1,9 @@
 @import 'tailwindcss';
-@import './drawer.css' layer(utilities);
-@import './popup.css' layer(utilities);
-@import './dialog.css' layer(utilities);
 @import './map.css' layer(utilities);
 @import './colors.css';
-@import "tailwindcss-radix-colors/dist/all.css";
+@import "tailwindcss-radix-colors/dist/gray.css";
+@import "tailwindcss-radix-colors/dist/red.css";
+@import "tailwindcss-radix-colors/dist/green.css";
 @plugin "tailwindcss-animate";
 
 
@@ -132,6 +131,19 @@
 
   --sidebar-ring: var(--gray-10);
 
+  --color-corvu-text: #180f24;
+  --color-corvu-bg: #f3f1fe;
+  --color-corvu-100: #e6e2fd;
+  --color-corvu-200: #d4cbfb;
+  --color-corvu-300: #bcacf6;
+  --color-corvu-400: #a888f1;
+
+  --animate-expand: expand 250ms cubic-bezier(0.32,0.72,0,0.75);
+  --animate-collapse: collapse 250ms cubic-bezier(0.32,0.72,0,0.75);
+  --animate-caret-blink: caret-blink 1.25s ease-out infinite;
+  --animate-in: enter 150ms ease;
+  --animate-out: exit 150ms ease;
+
 
   --colors-bg-canvas: var(--gray-1);
   --colors-bg-default: var(--gray-2);
@@ -150,440 +162,21 @@
   --colors-border-disabled: var(--gray-5);
   --colors-border-outline: var(--gray-a9);
   --colors-border-error: var(--red-9);
+}
 
-  --height: var(100%);
-  --width: var(100%);
+@utility fade-in-* {
+  --tw-enter-opacity: --value(percentage, ratio);
+}
+@utility fade-out-* {
+  --tw-exit-opacity: --value(percentage, ratio);
+}
 
-  --spacing-0: 0rem;
-  --spacing-1: 0.25rem;
-  --spacing-2: 0.5rem;
-  --spacing-3: 0.75rem;
-  --spacing-4: 1rem;
-  --spacing-5: 1.25rem;
-  --spacing-6: 1.5rem;
-  --spacing-7: 1.75rem;
-  --spacing-8: 2rem;
-  --spacing-9: 2.25rem;
-  --spacing-10: 2.5rem;
-  --spacing-11: 2.75rem;
-  --spacing-12: 3rem;
-  --spacing-14: 3.5rem;
-  --spacing-16: 4rem;
-  --spacing-20: 5rem;
-  --spacing-24: 6rem;
-  --spacing-28: 7rem;
-  --spacing-32: 8rem;
-  --spacing-36: 9rem;
-  --spacing-40: 10rem;
-  --spacing-44: 11rem;
-  --spacing-48: 12rem;
-  --spacing-52: 13rem;
-  --spacing-56: 14rem;
-  --spacing-60: 15rem;
-  --spacing-64: 16rem;
-  --spacing-72: 18rem;
-  --spacing-80: 20rem;
-  --spacing-96: 24rem;
-  --spacing-0\.5: 0.125rem;
-  --spacing-1\.5: 0.375rem;
-  --spacing-2\.5: 0.625rem;
-  --spacing-3\.5: 0.875rem;
-  --spacing-4\.5: 1.125rem;
-  --font-weights-thin: 100;
-  --font-weights-extralight: 200;
-  --font-weights-light: 300;
-  --font-weights-normal: 400;
-  --font-weights-medium: 500;
-  --font-weights-semibold: 600;
-  --font-weights-bold: 700;
-  --font-weights-extrabold: 800;
-  --font-weights-black: 900;
-
-  --durations-fastest: 50ms;
-  --durations-faster: 100ms;
-  --durations-fast: 150ms;
-  --durations-normal: 200ms;
-  --durations-slow: 300ms;
-  --durations-slower: 400ms;
-  --durations-slowest: 500ms;
-
-  --easings-pulse: cubic-bezier(0.4,0.0,0.6,1.0);
-  --easings-default: cubic-bezier(0.2,0.0,0,1.0);
-  --easings-emphasized-in: cubic-bezier(0.05,0.7,0.1,1.0);
-  --easings-emphasized-out: cubic-bezier(0.3,0.0,0.8,0.15);
-  --colors-coral-light-1: #fff8f7;
-  --colors-coral-light-2: #ffefef;
-  --colors-coral-light-3: #ffe5e4;
-  --colors-coral-light-4: #ffdbda;
-  --colors-coral-light-5: #ffd2d1;
-  --colors-coral-light-6: #ffc9c8;
-  --colors-coral-light-7: #ffbeb8;
-  --colors-coral-light-8: #ffb2a8;
-  --colors-coral-light-9: #eb5e41;
-  --colors-coral-light-10: #de5045;
-  --colors-coral-light-11: #c9453b;
-  --colors-coral-light-12: #762d25;
-  --colors-coral-dark-1: #1c1412;
-  --colors-coral-dark-2: #391a18;
-  --colors-coral-dark-3: #55221e;
-  --colors-coral-dark-4: #722b25;
-  --colors-coral-dark-5: #8e342b;
-  --colors-coral-dark-6: #aa3d32;
-  --colors-coral-dark-7: #c6493a;
-  --colors-coral-dark-8: #e2503f;
-  --colors-coral-dark-9: #eb5e41;
-  --colors-coral-dark-10: #ef6b4e;
-  --colors-coral-dark-11: #f47a5c;
-  --colors-coral-dark-12: #faa19b;
-  --colors-coral-1: var(--colors-coral-light-1);
-  --colors-coral-2: var(--colors-coral-light-2);
-  --colors-coral-3: var(--colors-coral-light-3);
-  --colors-coral-4: var(--colors-coral-light-4);
-  --colors-coral-5: var(--colors-coral-light-5);
-  --colors-coral-6: var(--colors-coral-light-6);
-  --colors-coral-7: var(--colors-coral-light-7);
-  --colors-coral-8: var(--colors-coral-light-8);
-  --colors-coral-9: var(--colors-coral-light-9);
-  --colors-coral-10: var(--colors-coral-light-10);
-  --colors-coral-11: var(--colors-coral-light-11);
-  --colors-coral-12: var(--colors-coral-light-12);
-  --colors-coral-default: var(--colors-coral-light-9);
-  --colors-coral-emphasized: var(--colors-coral-light-10);
-  --colors-coral-fg: #fff;
-  --colors-coral-text: var(--colors-coral-light-11);
-  --colors-color-palette-light-1: var(--colors-coral-light-1);
-  --colors-color-palette-light-2: var(--colors-coral-light-2);
-  --colors-color-palette-light-3: var(--colors-coral-light-3);
-  --colors-color-palette-light-4: var(--colors-coral-light-4);
-  --colors-color-palette-light-5: var(--colors-coral-light-5);
-  --colors-color-palette-light-6: var(--colors-coral-light-6);
-  --colors-color-palette-light-7: var(--colors-coral-light-7);
-  --colors-color-palette-light-8: var(--colors-coral-light-8);
-  --colors-color-palette-light-9: var(--colors-coral-light-9);
-  --colors-color-palette-light-10: var(--colors-coral-light-10);
-  --colors-color-palette-light-11: var(--colors-coral-light-11);
-  --colors-color-palette-light-12: var(--colors-coral-light-12);
-  --colors-color-palette-dark-1: var(--colors-coral-dark-1);
-  --colors-color-palette-dark-2: var(--colors-coral-dark-2);
-  --colors-color-palette-dark-3: var(--colors-coral-dark-3);
-  --colors-color-palette-dark-4: var(--colors-coral-dark-4);
-  --colors-color-palette-dark-5: var(--colors-coral-dark-5);
-  --colors-color-palette-dark-6: var(--colors-coral-dark-6);
-  --colors-color-palette-dark-7: var(--colors-coral-dark-7);
-  --colors-color-palette-dark-8: var(--colors-coral-dark-8);
-  --colors-color-palette-dark-9: var(--colors-coral-dark-9);
-  --colors-color-palette-dark-10: var(--colors-coral-dark-10);
-  --colors-color-palette-dark-11: var(--colors-coral-dark-11);
-  --colors-color-palette-dark-12: var(--colors-coral-dark-12);
-  --colors-color-palette-1: var(--colors-coral-1);
-  --colors-color-palette-2: var(--colors-coral-2);
-  --colors-color-palette-3: var(--colors-coral-3);
-  --colors-color-palette-4: var(--colors-coral-4);
-  --colors-color-palette-5: var(--colors-coral-5);
-  --colors-color-palette-6: var(--colors-coral-6);
-  --colors-color-palette-7: var(--colors-coral-7);
-  --colors-color-palette-8: var(--colors-coral-8);
-  --colors-color-palette-9: var(--colors-coral-9);
-  --colors-color-palette-10: var(--colors-coral-10);
-  --colors-color-palette-11: var(--colors-coral-11);
-  --colors-color-palette-12: var(--colors-coral-12);
-  --colors-color-palette-default: var(--colors-coral-default);
-  --colors-color-palette-emphasized: var(--colors-coral-emphasized);
-  --colors-color-palette-fg: var(--colors-coral-fg);
-  --colors-color-palette-text: var(--colors-coral-text);
-  article {
-    --colors-prose-body: var(--colors-fg-muted);
-    --colors-prose-heading: var(--colors-fg-default);
-    --colors-prose-bold: var(--colors-fg-default);
-    --colors-prose-link: var(--colors-fg-default);
-    --colors-prose-code: var(--colors-fg-muted);
-    --colors-prose-hr-border: var(--colors-border-subtle);
-    --colors-prose-quote-border: colors.accent.default
-  }
-
-  --sizes-0: 0rem;
-  --sizes-1: 0.25rem;
-  --sizes-2: 0.5rem;
-  --sizes-3: 0.75rem;
-  --sizes-4: 1rem;
-  --sizes-5: 1.25rem;
-  --sizes-6: 1.5rem;
-  --sizes-7: 1.75rem;
-  --sizes-8: 2rem;
-  --sizes-9: 2.25rem;
-  --sizes-10: 2.5rem;
-  --sizes-11: 2.75rem;
-  --sizes-12: 3rem;
-  --sizes-14: 3.5rem;
-  --sizes-16: 4rem;
-  --sizes-20: 5rem;
-  --sizes-24: 6rem;
-  --sizes-28: 7rem;
-  --sizes-32: 8rem;
-  --sizes-36: 9rem;
-  --sizes-40: 10rem;
-  --sizes-44: 11rem;
-  --sizes-48: 12rem;
-  --sizes-52: 13rem;
-  --sizes-56: 14rem;
-  --sizes-60: 15rem;
-  --sizes-64: 16rem;
-  --sizes-72: 18rem;
-  --sizes-80: 20rem;
-  --sizes-96: 24rem;
-
-  @keyframes fade-in {
-    0% {
-      opacity: 0
-    }
-
-    to {
-      opacity: 1
-    }
-  }
-
-  @keyframes fade-out {
-    0% {
-      opacity: 1
-    }
-
-    to {
-      opacity: 0
-    }
-  }
-
-  @keyframes slide-in {
-    0% {
-      opacity: 0;
-      transform: translateY(64px)
-    }
-
-    to {
-      opacity: 1;
-      transform: translateY(0)
-    }
-  }
-
-  @keyframes slide-out {
-    0% {
-      opacity: 1;
-      transform: translateY(0)
-    }
-
-    to {
-      opacity: 0;
-      transform: translateY(64px)
-    }
-  }
-
-  @keyframes slide-in-left {
-    0% {
-      transform: translateX(-100%)
-    }
-
-    to {
-      transform: translateX(0)
-    }
-  }
-
-  @keyframes slide-out-left {
-    0% {
-      transform: translateX(0)
-    }
-
-    to {
-      transform: translateX(-100%)
-    }
-  }
-
-  @keyframes slide-in-right {
-    0% {
-      transform: translateX(100%)
-    }
-
-    to {
-      transform: translateX(0)
-    }
-  }
-
-  @keyframes slide-out-right {
-    0% {
-      transform: translateX(0)
-    }
-
-    to {
-      transform: translateX(100%)
-    }
-  }
-
-  @keyframes collapse-in {
-    0% {
-      height: var(--sizes-0)
-    }
-
-    to {
-      height: var(--height)
-    }
-  }
-
-  @keyframes collapse-out {
-    0% {
-      height: var(--height)
-    }
-
-    to {
-      height: var(--sizes-0)
-    }
-  }
-
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-      transform: translateY(-4px)
-    }
-
-    to {
-      opacity: 1;
-      transform: translateY(0)
-    }
-  }
-
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-      transform: translateY(0)
-    }
-
-    to {
-      opacity: 0;
-      transform: translateY(-4px)
-    }
-  }
-
-  @keyframes skeleton-pulse {
-    50% {
-      opacity: .5
-    }
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg)
-    }
-
-    to {
-      transform: rotate(1turn)
-    }
-  }
-
+@utility zoom-in-* {
+  --tw-enter-scale: --value(percentage, ratio);
+}
+@utility zoom-out-* {
+  --tw-exit-scale: --value(percentage, ratio);
 }
 
 
-.segmentGroup__root {
-  display: flex;
-  align-items: flex-start
-}
-
-.segmentGroup__root[data-orientation=horizontal] {
-  gap: var(--spacing-4);
-  flex-direction: row;
-  border-bottom-width: 1px
-}
-
-.segmentGroup__root[data-orientation=vertical] {
-  gap: var(--spacing-1);
-  flex-direction: column;
-  border-left-width: 1px
-}
-
-.segmentGroup__item {
-  color: var(--colors-fg-muted);
-  cursor: pointer;
-  font-weight: var(--font-weights-medium);
-  --transition-duration: var(--durations-normal);
-  transition-duration: var(--durations-normal);
-  --transition-prop: color;
-  transition-property: color;
-  --transition-easing: var(--easings-default);
-  transition-timing-function: var(--easings-default)
-}
-
-.segmentGroup__item:is(:checked,[data-checked],[aria-checked=true],[data-state=checked]) {
-  color: var(--colors-fg-default);
-  font-weight: var(--font-weights-semibold)
-}
-
-.segmentGroup__item:is(:disabled,[disabled],[data-disabled]) {
-  color: var(--colors-fg-disabled);
-  cursor: not-allowed
-}
-
-.segmentGroup__item[data-orientation=horizontal] {
-  padding-inline: var(--spacing-1);
-  padding-bottom: var(--spacing-3)
-}
-
-.segmentGroup__item[data-orientation=vertical] {
-  padding-inline: var(--spacing-3);
-  padding-block:var(--spacing-2)}
-
-.segmentGroup__indicator {
-  border-color: var(--colors-color-palette-default)
-}
-
-.segmentGroup__indicator[data-orientation=horizontal] {
-  transform: translateY(1px);
-  width: var(--width);
-  bottom: var(--spacing-0);
-  border-bottom-width: 2px
-}
-
-.segmentGroup__indicator[data-orientation=vertical] {
-  height: var(--height);
-  transform: translateX(-1px);
-  border-left-width: 2px
-}
-
-.d_flex {
-  display: flex
-}
-
-.flex-d_column {
-  flex-direction: column
-}
-
-.jc_flex-end {
-  justify-content: flex-end
-}
-
-.flex-d_row {
-  flex-direction: row
-}
-
-.ai_center {
-  align-items: center
-}
-
-.flex_1 {
-  flex: 1 1 0%
-}
-
-.gap_1 {
-  gap: var(--spacing-1)
-}
-
-.gap_6 {
-  gap: var(--spacing-6)
-}
-
-.gap_4 {
-  gap: var(--spacing-4)
-}
-
-.gap_10px {
-  gap: 10px
-}
-
-.pos_fixed {
-  position: fixed
-}
+@plugin '@tailwindcss/forms';
